--- a/everestrs/everestrs/Cargo.toml
+++ b/everestrs/everestrs/Cargo.toml
@@ -10,3 +10,6 @@ serde = { version = "1.0.175", features = ["derive"] }
 serde_json = "1"
 thiserror = "1.0.48"
 everestrs-build = { workspace = true }
+
+[features]
+build_bazel = []
