Fix bazel build.

--- a/everestrs/everestrs/BUILD.bazel
+++ b/everestrs/everestrs/BUILD.bazel
@@ -7,6 +7,7 @@ rust_library(
     edition = "2021",
     deps =  [
         "@crate_index//:argh",
+        "@crate_index//:log",
         "@crate_index//:serde",
         "@crate_index//:serde_json",
         "@crate_index//:thiserror",
