--- a/everestrs/everestrs/Cargo.toml
+++ b/everestrs/everestrs/Cargo.toml
@@ -7,7 +7,7 @@ edition = "2021"
 argh = "0.1.10"
 cxx = { version = "1.0.107", features = ["c++17"] }
 everestrs-build = { workspace = true }
-log = "0.4.20"
+log = { version = "0.4.20", features = ["std"] }
 serde = { version = "1.0.175", features = ["derive"] }
 serde_json = "1"
 thiserror = "1.0.48"
